# starwin

./: CMakeLists.txt
cmake/: Config.cmake  Dependencies.cmake  Export.cmake  PackageConfigs.cmake  Sources.cmake  TemplatePackageConfig.pc.in
sources/starwin/: CMakeLists.txt
sources/starwin/api/: input.hpp  window.hpp
sources/starwin/internal/: gl45_window.cpp  gl45_window.hpp  glfw_window.cpp  glfw_window.hpp  virtual_controller.cpp  virtual_keyboard.cpp  virtual_mouse.cpp  window.cpp
